<resources>
    <string name="app_name">My Application 2</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="button">Login</string>
    <string name="resetPassword">Reset Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirmPasswordField"> Confirm Password</string>
    <string name="name">Name</string>
    <string name="nameField">Name</string>
    <string name="signup">Sign Up</string>
    <string name="newPassword">New Password</string>
    <string name="hello">Maria Rauf 19-ARID-811</string>
</resources>